--- a/women/templates/women/about.html
+++ b/women/templates/women/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Про сайт</title>
+    <title>{{ title }}</title>
 </head>
 <body>
   <h1>Про сайт</h1>
