add get_absolute_url in women/models

--- a/women/templates/women/index.html
+++ b/women/templates/women/index.html
@@ -9,7 +9,7 @@
         {{p.content|linebreaks|truncatewords:50}}
         {% endautoescape %}
             <div class="clear"></div>
-            <p class="link-read-post"><a href="{% url 'post' p.pk %}">Читати публікацію</a></p>
+            <p class="link-read-post"><a href="{{ p.get_absolute_url }}">Читати публікацію</a></p>
         </li>
 	{% endfor %}
 </ul>
