--- a/women/templates/women/base.html
+++ b/women/templates/women/base.html
@@ -33,14 +33,14 @@
 <tr>
 <!-- Sidebar -->
 	<td valign="top" class="left-chapters">
-		{% get_categories %}
+		{% getcats as categories %}
 	<ul id="leftchapters">
 		{% if cat_selected == 0 %}
 			<li class="selected">Всі категорії</li>
 		{% else %}
 			<li><a href="{% url 'home' %}">Всі категорії</a></li>
 		{% endif %}
-		{% for c in cats %}
+		{% for c in categories %}
 			{% if c.pk == cat_selected %}
 				<li class="selected">{{ c.name }}</li>
 			{% else %}
