--- a/women/templates/women/base.html
+++ b/women/templates/women/base.html
@@ -33,20 +33,18 @@
 <tr>
 <!-- Sidebar -->
 	<td valign="top" class="left-chapters">
-		{% getcats as categories %}
+		<!-- тег -->
+	<!-- {% getcats as categories %}-->
+		<!-- тег -->
 	<ul id="leftchapters">
 		{% if cat_selected == 0 %}
 			<li class="selected">Всі категорії</li>
 		{% else %}
 			<li><a href="{% url 'home' %}">Всі категорії</a></li>
 		{% endif %}
-		{% for c in categories %}
-			{% if c.pk == cat_selected %}
-				<li class="selected">{{ c.name }}</li>
-			{% else %}
-				<li><a href="{{ c.get_absolute_url }}">{{ c.name }}</a></li>
-			{% endif %}
-		{% endfor %}
+		<!-- Включающий тег -->
+		{% show_categories %}
+		<!-- Включающий тег -->
 		<li class="share">
 		<p>Наш канал</p>
 		<a class="share-yt" href="https://www.youtube.com/watch?v=yNycw9zhO98&list=RDyNycw9zhO98&start_radio=1" target="_blank" rel="nofollow"></a>
