changed AddPostForm, addpage.html, addpage in views.py

--- a/women/templates/women/addpage.html
+++ b/women/templates/women/addpage.html
@@ -2,5 +2,55 @@
 
 {% block content %}
 <h1>{{ title }}</h1>
-<p>Зміст сторінки</p>
+<form action="{% url 'addpage' %}" method="post">
+    {% csrf_token %}
+    <!--========================title================================-->
+    <p>
+        <label class="form-label" for="{{ form.title.id_for_label }}">
+            {{ form.title.label }}:
+        </label>
+        {{ form.title }}
+    </p>
+    <div class="form-error">{{ form.title.errors }}</div>
+    <!--========================title================================-->
+    <!--========================slug================================-->
+    <p>
+        <label class="form-label" for="{{ form.slug.id_for_label }}">
+            {{ form.slug.label }}:
+        </label>
+        {{ form.slug }}
+    </p>
+    <div class="form-error">{{ form.slug.errors }}</div>
+    <!--========================slug================================-->
+    <!--========================content================================-->
+    <p>
+        <label class="form-label" for="{{ form.content.id_for_label }}">
+            {{ form.content.label }}:
+        </label>
+        {{ form.content }}
+    </p>
+    <div class="form-error">{{ form.content.errors }}</div>
+    <!--========================content================================-->
+    <!--========================is_published================================-->
+    <p>
+        <label class="form-label" for="{{ form.is_published.id_for_label }}">
+            {{ form.is_published.label }}:
+        </label>
+        {{ form.is_published }}
+    </p>
+    <div class="form-error">{{ form.is_published.errors }}</div>
+    <!--========================is_published================================-->
+    <!--========================cat================================-->
+    <p>
+        <label class="form-label" for="{{ form.cat.id_for_label }}">
+            {{ form.cat.label }}:
+        </label>
+        {{ form.cat }}
+    </p>
+    <div class="form-error">{{ form.cat.errors }}</div>
+    <!--========================cat===============================-->
+
+    <button type="submit">Додати</button>
+</form>
+
 {% endblock %}
