--- a/women/templates/women/addpage.html
+++ b/women/templates/women/addpage.html
@@ -4,6 +4,7 @@
 <h1>{{ title }}</h1>
 <form action="{% url 'addpage' %}" method="post">
     {% csrf_token %}
+    <div class="form-error">{{ form.non_field_errors }}</div>
     <!--========================for================================-->
     {% for f in form %}
     <p>
