--- a/women/templates/women/base.html
+++ b/women/templates/women/base.html
@@ -3,84 +3,101 @@
 {% load women_tags %}
 <html>
 <head>
-	<title>{{title}}</title>
-	<link type="text/css" href="{% static 'women/css/styles.css' %}" rel="stylesheet" />
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link rel="shortcut icon" href="{% static 'women/images/main.ico' %}" type="image/x-icon"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}}</title>
+    <link type="text/css" href="{% static 'women/css/styles.css' %}" rel="stylesheet"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="shortcut icon" href="{% static 'women/images/main.ico' %}" type="image/x-icon"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <table class="table-page" border=0 cellpadding="0" cellspacing="0">
-<tr><td valign=top>
-{% block mainmenu %}
-		<div class="header">
-			<ul id="mainmenu" class="mainmenu">
-			<li class="logo"><a href="{% url 'home' %}"><div class="logo"></div></a></li>
-{% for m in menu %}
-	{% if not forloop.last %}
-			<li><a href="{% url m.url_name %}">{{m.title}}</a></li>
-	{% else %}
-			<li class="last"><a href="{% url m.url_name %}">{{m.title}}</a></li>
-	{% endif %}
-{% endfor %}
-			</ul>
-			<div class="clear"></div>
-		</div>
-{% endblock mainmenu %}
+    <tr>
+        <td valign=top>
+            {% block mainmenu %}
+            <div class="header">
+                <ul id="mainmenu" class="mainmenu">
+                    <li class="logo"><a href="{% url 'home' %}">
+                        <div class="logo"></div>
+                    </a></li>
+                    {% for m in menu %}
+                        {% if not forloop.last %}
+                            <li><a href="{% url m.url_name %}">{{m.title}}</a></li>
+                        {% else %}
+                            <li class="last"><a href="{% url m.url_name %}">{{m.title}}</a></li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+                <div class="clear"></div>
+            </div>
+            {% endblock mainmenu %}
 
 
-<table class="table-content" border=0 cellpadding="0" cellspacing="0">
-<tr>
-<!-- Sidebar -->
-	<td valign="top" class="left-chapters">
-		<!-- тег -->
-	<!-- {% getcats as categories %}-->
-		<!-- тег -->
-		<!-- тег -->
-<!--		{% getcats filter=1 %}-->
-		<!-- тег -->
-	<ul id="leftchapters">
-		{% if cat_selected == 0 %}
-			<li class="selected">Всі категорії</li>
-		{% else %}
-			<li><a href="{% url 'home' %}">Всі категорії</a></li>
-		{% endif %}
+            <table class="table-content" border=0 cellpadding="0" cellspacing="0">
+                <tr>
+                    <!-- Sidebar -->
+                    <td valign="top" class="left-chapters">
+                        <ul id="leftchapters">
+                            {% if cat_selected == 0 %}
+                                <li class="selected">Всі категорії</li>
+                            {% else %}
+                                <li><a href="{% url 'home' %}">Всі категорії</a></li>
+                            {% endif %}
 
-		{% for c in cats %}
-			{% if c.pk == cat_selected %}
-				<li class="selected">{{ c.name }}</li>
-			{% else %}
-				<li><a href="{{ c.get_absolute_url }}">{{ c.name }}</a></li>
-			{% endif %}
-		{% endfor %}
+                            {% for c in cats %}
+                                {% if c.women__count > 0 %}
+                                    {% if c.pk == cat_selected %}
+                                    <li class="selected">{{ c.name }}</li>
+                                    {% else %}
+                                    <li><a href="{{ c.get_absolute_url }}">{{ c.name }}</a></li>
+                                    {% endif %}
+                                {% endif %}
+                            {% endfor %}
 
-		<li class="share">
-		<p>Наш канал</p>
-		<a class="share-yt" href="https://www.youtube.com/watch?v=yNycw9zhO98&list=RDyNycw9zhO98&start_radio=1" target="_blank" rel="nofollow"></a>
-		</li>
-	</ul>
-</td>
-<!-- Кінець Sidebar'а -->
-<td valign="top" class="content">
-	<!-- Хлібні крихти -->
-	{% block breadcrumbs %}
-	{% endblock %}
+                            <li class="share">
+                                <p>Наш канал</p>
+                                <a class="share-yt"
+                                   href="https://www.youtube.com/watch?v=yNycw9zhO98&list=RDyNycw9zhO98&start_radio=1"
+                                   target="_blank" rel="nofollow"></a>
+                            </li>
+                        </ul>
+                    </td>
+                    <!-- Кінець Sidebar'а -->
+                    <td valign="top" class="content">
+                        <!-- Хлібні крихти -->
+                        {% block breadcrumbs %}
+                        {% endblock %}
 
-<!-- Блок контента -->
-	<div class="content-text">
-{% block content %}
-{% endblock %}
-	</div>
-<!-- Кінець блока контента -->
+                        <!-- Блок контента -->
+                        <div class="content-text">
+                            {% block content %}
+                            {% endblock %}
+                            <nav class="list-pages">
+                                <ul>
+                                    {% for p in paginator.page_range %}
+                                        <li class="page-num">
+                                            <a href="?page={{ p }}">{{ p }}</a>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
 
-</td></tr></table>
-</td></tr>
-<!-- Footer -->
-<tr><td valign=top>
-	<div id="footer">
-		<p>&copy; 2023 Часткове або повне копіювання інформації, суворо заборонено.</p>
-	</div>
-</td></tr></table>
+                            </nav>
+                        </div>
+                        <!-- Кінець блока контента -->
+
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+    <!-- Footer -->
+    <tr>
+        <td valign=top>
+            <div id="footer">
+                <p>&copy; 2023 Часткове або повне копіювання інформації, суворо заборонено.</p>
+            </div>
+        </td>
+    </tr>
+</table>
 <!-- Кінець footer'а и сторінки -->
 </body>
 </html>
