--- a/women/templates/women/base.html
+++ b/women/templates/women/base.html
@@ -20,12 +20,13 @@
                         <div class="logo"></div>
                     </a></li>
                     {% for m in menu %}
-                        {% if not forloop.last %}
                             <li><a href="{% url m.url_name %}">{{m.title}}</a></li>
-                        {% else %}
-                            <li class="last"><a href="{% url m.url_name %}">{{m.title}}</a></li>
-                        {% endif %}
                     {% endfor %}
+                    <li class="last">
+                        <a href="{% url 'register' %}">Реєстрація</a>
+                        |
+                        <a href="{% url 'login' %}">Вхід</a>
+                    </li>
                 </ul>
                 <div class="clear"></div>
             </div>
