--- a/women/templates/women/base.html
+++ b/women/templates/women/base.html
@@ -22,11 +22,15 @@
                     {% for m in menu %}
                             <li><a href="{% url m.url_name %}">{{m.title}}</a></li>
                     {% endfor %}
-                    <li class="last">
-                        <a href="{% url 'register' %}">Реєстрація</a>
-                        |
-                        <a href="{% url 'login' %}">Вхід</a>
-                    </li>
+                    {% if request.user.is_authenticated %}
+                        <li class="last">{{ user.username }} | <a href="{% url 'logout' %}">Вихід</a></li>
+                    {% else %}
+                        <li class="last">
+                            <a href="{% url 'register' %}">Реєстрація</a>
+                            |
+                            <a href="{% url 'login' %}">Вхід</a>
+                        </li>
+                    {% endif %}
                 </ul>
                 <div class="clear"></div>
             </div>
